2006-07-31  Roger Leigh  <rleigh@debian.org>

	* schroot/setup/50chrootname: Name in log message always matches
	debian_chroot chrootname.

2006-07-30  Roger Leigh  <rleigh@debian.org>

	* Merge from schroot-1.0 branch.

	* Update translator comments.

	* Add sbuild/sbuild-types.cc.

2006-07-30  Roger Leigh  <rleigh@debian.org>

	* po/LINGUAS: Add cs.

2006-07-30  Luk Claes  <luk@debian.org>

	* po/cs.po: Add Czech translation.

2006-07-30  Roger Leigh  <rleigh@debian.org>

	* Merge translations from schroot-1.0 branch.

2006-07-30  Roger Leigh  <rleigh@debian.org>

	* Merge from schroot-1.0 branch.

	* configure.ac: Fix --enable-dchroot-dsa help string.  Thanks to
	Jens Seidel <jensseidel@users.sf.net> for reporting this.

	* schroot/schroot-options-base.cc
	(check_actions): Clarify error message when starting a session,
	and the number of chroots specified is not 1.  Thanks to Jens
	Seidel <jensseidel@users.sf.net> for reporting this.

	* schroot/schroot-base-main.cc
	(action_version): Fix translator comment.  Thanks to Jens Seidel
	<jensseidel@users.sf.net> for reporting this.

	* sbuild/Makefile.am
	(sbuild_public_cc_sources): Add sbuild-types.cc.

	* sbuild/sbuild-types.cc: New file.
	(get_date_format): Get a localised strftime format string.

	* sbuild/sbuild-types.h (operator <<): Allow localisation of the
	std::time_put format string.

2006-07-29  Roger Leigh  <rleigh@debian.org>

	* New development series on the main trunk.

	* debian/changelog: Bump version to 1.1.0.

	* NEWS: Bump version to 1.1.0.

	* configure.ac: Bump version to 1.1.0.

2006-07-29  Roger Leigh  <rleigh@debian.org>

	* Update translations.

2006-07-29  Roger Leigh  <rleigh@debian.org>

	* TODO: Add future items.

	* All catch blocks catch const references.

	* sbuild/sbuild-run-parts.cc
	(run_child): Handle exceptions thrown in child.

	* sbuild/sbuild-session.cc
	(setup_chroot): Handle exceptions thrown in child.

	* Replace all uses std::locale("C") with std::locale::classic().
