@@ -1,5 +1,10 @@
 2006-07-31  Roger Leigh  <rleigh@debian.org>
 
+	* schroot/schroot.1.in, dchroot/dchroot.1.in: Document mips and
+	mipsel personality bug.
+
+2006-07-31  Roger Leigh  <rleigh@debian.org>
+
 	* schroot/setup/50chrootname: Name in log message always matches
 	debian_chroot chrootname.
 
